--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,47 +1,41 @@
-name: Go Application CI/CD Pipeline
+name: Go CI/CD Pipeline
 on:
   push:
     branches: [main]
-    tags: ['v*']  
+    tags: ['v*']  # Триггер для тегов v1.0.0, v1.0.1 и т.д.
   pull_request:
     branches: [main]
 
 jobs:
-  quality-assurance:
-    name: Code Quality and Testing
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch Source Code
+      - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Configure Go Environment
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
       
-      - name: Download dependencies
-        run: go mod download
+      - name: Install dependencies
+        run: |
+          go mod download
+          go mod tidy
       
-      - name: Execute Test Suite
-        run: go test ./... || echo "No tests found or tests failed"
+      - name: Run tests
+        run: go test ./... || true
       
-      - name: Static Code Analysis
-        run: go vet ./... || echo "Vet found issues"
-      
-      - name: Compile Application
-        run: go build -o application .
-      
-      - name: Build Docker Image (Test)
-        run: docker build -t local-test .
+      - name: Build
+        run: go build -o app .
 
-  container-registry-push:
-    name: Publish Container Image
+  deploy:
     runs-on: ubuntu-latest
-    needs: quality-assurance
-    if: startsWith(github.ref, 'refs/tags/')
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/')  # ТОЛЬКО для тегов!
     
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
       
       - name: Set up Docker Buildx
@@ -53,20 +47,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
       
-      - name: Extract Tag Name
-        id: tag
-        run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+      - name: Get tag name
+        id: get_tag
+        run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
       
-      - name: Build and Push Docker Image
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/tz12sprint:latest
-            ${{ secrets.DOCKER_USERNAME }}/tz12sprint:${{ steps.tag.outputs.TAG }}
-      
-      - name: Verify Image on DockerHub
-        run: |
-          echo "Image pushed: ${{ secrets.DOCKER_USERNAME }}/tz12sprint:${{ steps.tag.outputs.TAG }}"
-          echo "Pull command: docker pull ${{ secrets.DOCKER_USERNAME }}/tz12sprint:${{ steps.tag.outputs.TAG }}"
+            ${{ secrets.DOCKER_USERNAME }}/tz12sprint:${{ steps.get_tag.outputs.tag }}
