--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: Go CI/CD Pipeline
 on:
   push:
     branches: [main]
-    tags: ['v*']  # Триггер для тегов v1.0.0, v1.0.1 и т.д.
+    tags: ['v*']  
   pull_request:
     branches: [main]
 
@@ -32,7 +32,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    if: startsWith(github.ref, 'refs/tags/')  # ТОЛЬКО для тегов!
+    if: startsWith(github.ref, 'refs/tags/')  
     
     steps:
       - name: Checkout code
