--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,11 +1,11 @@
 name: Go Application CI/CD Pipeline
+
 on:
   push:
     branches: [main, master]
+    tags: ['v*']
   pull_request:
     branches: [main, master]
-  tags:
-    - 'v*'
 
 jobs:
   quality-assurance:
